@@ -1,3 +1,8 @@
+Mon Jul  3 17:54:49 2000  Owen Taylor  <otaylor@redhat.com>
+
+	* gdk/x11/gdkfont-x11.c (gdk_font_charset_for_locale): 
+	font charset is iso8859-1, not iso-8859-1.
+
 Mon Jul  3 17:08:14 2000  Owen Taylor  <otaylor@redhat.com>
 
 	* gdk/x11/gdkfont-x11.c (gdk_font_charset_for_locale):
